; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/avr/extr_suspend.c_power_down.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/avr/extr_suspend.c_power_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@wdt_timeout = common dso_local global i32 0, align 4
@SLEEP_MODE_PWR_DOWN = common dso_local global i32 0, align 4
@DEVICE_STATE_Configured = common dso_local global i64 0, align 8
@USB_DeviceState = common dso_local global i64 0, align 8
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@is_suspended = common dso_local global i32 0, align 4
@rgblight_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@rgblight_enabled = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @power_down to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @power_down(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  store i32 %4, i32* @wdt_timeout, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @wdt_intr_enable(i32 %5)
  store i32 0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @led_set(i32 %7)
  %9 = call i32 (...) @suspend_power_down_kb()
  %10 = load i32, i32* @SLEEP_MODE_PWR_DOWN, align 4
  %11 = call i32 @set_sleep_mode(i32 %10)
  %12 = call i32 (...) @sleep_enable()
  %13 = call i32 (...) @sei()
  %14 = call i32 (...) @sleep_cpu()
  %15 = call i32 (...) @sleep_disable()
  %16 = call i32 (...) @wdt_disable()
  ret void
}

declare dso_local i32 @wdt_intr_enable(i32) #1

declare dso_local i32 @led_set(i32) #1

declare dso_local i32 @suspend_power_down_kb(...) #1

declare dso_local i32 @set_sleep_mode(i32) #1

declare dso_local i32 @sleep_enable(...) #1

declare dso_local i32 @sei(...) #1

declare dso_local i32 @sleep_cpu(...) #1

declare dso_local i32 @sleep_disable(...) #1

declare dso_local i32 @wdt_disable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
